fix: ensure background blur appears correctly on Safari

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ button {
   cursor: pointer;
   border: none;
   background: none;
+  color: #fff;
 }
 
 h2 {
@@ -52,6 +53,10 @@ p {
   color: var(--paragraph-color);
   font-size: 22px;
   margin-block: 10px;
+}
+
+* {
+  z-index: 999;
 }
 
 html {
